Support multiple OpenAPI sources